0.8/_sources/checks_gallery/tabular/index.rst.txt
:orphan:



.. _sphx_glr_checks_gallery_tabular:

================
Tabular Checks
================

.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_checks_gallery_tabular_data_integrity:

Data Integrity
==============


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Mixed Nulls">

.. only:: html

 .. figure:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_mixed_nulls_thumb.png
     :alt: Mixed Nulls

     :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_mixed_nulls.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/data_integrity/plot_mixed_nulls

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This page provides an overview for using and understanding the &quot;String Mismatch&quot; check.">

.. only:: html

 .. figure:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_string_mismatch_thumb.png
     :alt: String Mismatch

     :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_string_mismatch.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/data_integrity/plot_string_mismatch

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Feature Label Correlation">

.. only:: html

 .. figure:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_feature_label_correlation_thumb.png
     :alt: Feature Label Correlation

     :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_feature_label_correlation.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/data_integrity/plot_feature_label_correlation

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the feature-feature correlation...">

.. only:: html

 .. figure:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_feature_feature_correlation_thumb.png
     :alt: Feature Feature Correlation

     :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_feature_feature_correlation.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/data_integrity/plot_feature_feature_correlation

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Columns Info">

.. only:: html

 .. figure:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_columns_info_thumb.png
     :alt: Columns Info

     :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_columns_info.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/data_integrity/plot_columns_info

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the Outlier Sample Detection ch...">

.. only:: html

 .. figure:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_outlier_sample_detection_thumb.png
     :alt: Outlier Sample Detection

     :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_outlier_sample_detection.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/data_integrity/plot_outlier_sample_detection

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Is Single Value">

.. only:: html

 .. figure:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_is_single_value_thumb.png
     :alt: Is Single Value

     :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_is_single_value.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/data_integrity/plot_is_single_value

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="String Length Out Of Bounds">

.. only:: html

 .. figure:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_string_length_out_of_bounds_thumb.png
     :alt: String Length Out Of Bounds

     :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_string_length_out_of_bounds.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/data_integrity/plot_string_length_out_of_bounds

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the identifier-label correlatio...">

.. only:: html

 .. figure:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_identifier_label_correlation_thumb.png
     :alt: Identifier Label Correlation

     :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_identifier_label_correlation.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/data_integrity/plot_identifier_label_correlation

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the conflicting labels check.">

.. only:: html

 .. figure:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_conflicting_labels_thumb.png
     :alt: Conflicting Labels

     :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_conflicting_labels.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/data_integrity/plot_conflicting_labels

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the data duplicates check:">

.. only:: html

 .. figure:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_data_duplicates_thumb.png
     :alt: Data Duplicates

     :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_data_duplicates.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/data_integrity/plot_data_duplicates

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Special Characters">

.. only:: html

 .. figure:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_special_chars_thumb.png
     :alt: Special Characters

     :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_special_chars.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/data_integrity/plot_special_chars

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the mixed data types check.">

.. only:: html

 .. figure:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_mixed_data_types_thumb.png
     :alt: Mixed Data Types

     :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_mixed_data_types.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/data_integrity/plot_mixed_data_types
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_checks_gallery_tabular_model_evaluation:

Model Evaluation
================



.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Model Info">

.. only:: html

 .. figure:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_model_info_thumb.png
     :alt: Model Info

     :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_model_info.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/model_evaluation/plot_model_info

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Segment Performance">

.. only:: html

 .. figure:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_segment_performance_thumb.png
     :alt: Segment Performance

     :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_segment_performance.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/model_evaluation/plot_segment_performance

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Confusion Matrix Report">

.. only:: html

 .. figure:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_confusion_matrix_report_thumb.png
     :alt: Confusion Matrix Report

     :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_confusion_matrix_report.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/model_evaluation/plot_confusion_matrix_report

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

 .. figure:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_unused_features_thumb.png
     :alt: Unused Features

     :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_unused_features.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/model_evaluation/plot_unused_features

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

 .. figure:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_simple_model_comparison_thumb.png
     :alt: Simple Model Comparison

     :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_simple_model_comparison.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/model_evaluation/plot_simple_model_comparison

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Model Inference Time">

.. only:: html

 .. figure:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_model_inference_time_thumb.png
     :alt: Model Inference Time

     :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_model_inference_time.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/model_evaluation/plot_model_inference_time

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

 .. figure:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_performance_report_thumb.png
     :alt: Performance Report

     :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_performance_report.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/model_evaluation/plot_performance_report

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Regression Systematic Error">

.. only:: html

 .. figure:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_regression_systematic_error_thumb.png
     :alt: Regression Systematic Error

     :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_regression_systematic_error.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/model_evaluation/plot_regression_systematic_error

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the model error analysis check.">

.. only:: html

 .. figure:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_model_error_analysis_thumb.png
     :alt: Model Error Analysis

     :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_model_error_analysis.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/model_evaluation/plot_model_error_analysis

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="ROC Report">

.. only:: html

 .. figure:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_roc_report_thumb.png
     :alt: ROC Report

     :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_roc_report.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/model_evaluation/plot_roc_report

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Regression Error Distribution">

.. only:: html

 .. figure:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_regression_error_distribution_thumb.png
     :alt: Regression Error Distribution

     :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_regression_error_distribution.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/model_evaluation/plot_regression_error_distribution

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the weak segment performance ch...">

.. only:: html

 .. figure:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_weak_segments_performance_thumb.png
     :alt: Weak Segments Performance

     :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_weak_segments_performance.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/model_evaluation/plot_weak_segments_performance

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Calibration Score">

.. only:: html

 .. figure:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_calibration_score_thumb.png
     :alt: Calibration Score

     :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_calibration_score.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/model_evaluation/plot_calibration_score

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the boosting overfit check.">

.. only:: html

 .. figure:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_boosting_overfit_thumb.png
     :alt: Boosting Overfit

     :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_boosting_overfit.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/model_evaluation/plot_boosting_overfit

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the tabular prediction drift ch...">

.. only:: html

 .. figure:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_train_test_prediction_drift_thumb.png
     :alt: Train Test Prediction Drift

     :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_train_test_prediction_drift.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/model_evaluation/plot_train_test_prediction_drift

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Multi Model Performance Report">

.. only:: html

 .. figure:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_multi_model_performance_report_thumb.png
     :alt: Multi Model Performance Report

     :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_multi_model_performance_report.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/model_evaluation/plot_multi_model_performance_report
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. _sphx_glr_checks_gallery_tabular_train_test_validation:

Train Test Validation
=====================


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This check is deprecated, see `IdentifierLabelCorrelation">

.. only:: html

 .. figure:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_identifier_leakage_thumb.png
     :alt: This check is deprecated, see `IdentifierLabelCorrelation

     :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_identifier_leakage.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/train_test_validation/plot_identifier_leakage

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This page provides an overview for using and understanding the &quot;String Mismatch Comparison&quot; che...">

.. only:: html

 .. figure:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_string_mismatch_comparison_thumb.png
     :alt: String Mismatch Comparison

     :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_string_mismatch_comparison.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/train_test_validation/plot_string_mismatch_comparison

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

 .. figure:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_dominant_frequency_change_thumb.png
     :alt: Dominant Frequency Change

     :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_dominant_frequency_change.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/train_test_validation/plot_dominant_frequency_change

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

 .. figure:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_train_test_samples_mix_thumb.png
     :alt: Train Test Samples Mix

     :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_train_test_samples_mix.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/train_test_validation/plot_train_test_samples_mix

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Datasets Size Comparison">

.. only:: html

 .. figure:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_datasets_size_comparison_thumb.png
     :alt: Datasets Size Comparison

     :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_datasets_size_comparison.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/train_test_validation/plot_datasets_size_comparison

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="New Label">

.. only:: html

 .. figure:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_new_label_train_test_thumb.png
     :alt: New Label

     :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_new_label_train_test.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/train_test_validation/plot_new_label_train_test

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="New Category">

.. only:: html

 .. figure:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_category_mismatch_train_test_thumb.png
     :alt: New Category

     :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_category_mismatch_train_test.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/train_test_validation/plot_category_mismatch_train_test

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Index Leakage">

.. only:: html

 .. figure:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_index_leakage_thumb.png
     :alt: Index Leakage

     :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_index_leakage.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/train_test_validation/plot_index_leakage

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the &quot;Feature Label Correlation C...">

.. only:: html

 .. figure:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_feature_label_correlation_change_thumb.png
     :alt: Feature Label Correlation Change

     :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_feature_label_correlation_change.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/train_test_validation/plot_feature_label_correlation_change

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the whole dataset drift check.">

.. only:: html

 .. figure:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_whole_dataset_drift_thumb.png
     :alt: Whole Dataset Drift

     :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_whole_dataset_drift.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/train_test_validation/plot_whole_dataset_drift

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding label drift check.">

.. only:: html

 .. figure:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_train_test_label_drift_thumb.png
     :alt: Train Test Label Drift

     :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_train_test_label_drift.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/train_test_validation/plot_train_test_label_drift

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Date Train Test Validation Leakage Overlap">

.. only:: html

 .. figure:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_date_train_test_leakage_overlap_thumb.png
     :alt: Date Train Test Validation Leakage Overlap

     :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_date_train_test_leakage_overlap.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/train_test_validation/plot_date_train_test_leakage_overlap

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Date Train Test Validation Leakage Duplicates">

.. only:: html

 .. figure:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_date_train_test_leakage_duplicates_thumb.png
     :alt: Date Train Test Validation Leakage Duplicates

     :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_date_train_test_leakage_duplicates.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/train_test_validation/plot_date_train_test_leakage_duplicates

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding feature drift check.">

.. only:: html

 .. figure:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_train_test_feature_drift_thumb.png
     :alt: Train Test Feature Drift

     :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_train_test_feature_drift.py`

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /checks_gallery/tabular/train_test_validation/plot_train_test_feature_drift
.. raw:: html

    <div class="sphx-glr-clear"></div>



.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-gallery


  .. container:: sphx-glr-download sphx-glr-download-python

    :download:`Download all examples in Python source code: tabular_python.zip </checks_gallery/tabular/tabular_python.zip>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

    :download:`Download all examples in Jupyter notebooks: tabular_jupyter.zip </checks_gallery/tabular/tabular_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
