0.9/_sources/checks_gallery/tabular/index.rst.txt
:orphan:

================
Tabular Checks
================


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>

Custom Checks
=============



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In addition to deepchecks&#x27; built-in checks, it is possible to extend deepchecks by implementing...">

.. only:: html

  .. image:: /checks_gallery/tabular/custom/images/thumb/sphx_glr_plot_create_a_custom_check_thumb.png
    :alt: Create a Custom Check

  :ref:`sphx_glr_checks_gallery_tabular_custom_plot_create_a_custom_check.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Create a Custom Check</div>
    </div>


.. raw:: html

    </div>

Data Integrity
==============


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the Mixed Nulls check.">

.. only:: html

  .. image:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_mixed_nulls_thumb.png
    :alt: Mixed Nulls

  :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_mixed_nulls.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mixed Nulls</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using the Percent Of Nulls check.">

.. only:: html

  .. image:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_percent_of_nulls_thumb.png
    :alt: Percent Of Nulls

  :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_percent_of_nulls.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Percent Of Nulls</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the &quot;String Mismatch&quot; check.">

.. only:: html

  .. image:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_string_mismatch_thumb.png
    :alt: String Mismatch

  :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_string_mismatch.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">String Mismatch</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the String Length Out Of Bounds ...">

.. only:: html

  .. image:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_string_length_out_of_bounds_thumb.png
    :alt: String Length Out Of Bounds

  :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_string_length_out_of_bounds.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">String Length Out Of Bounds</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the Feature Label Correlation ch...">

.. only:: html

  .. image:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_feature_label_correlation_thumb.png
    :alt: Feature Label Correlation

  :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_feature_label_correlation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Feature Label Correlation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the Is Single Value check.">

.. only:: html

  .. image:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_is_single_value_thumb.png
    :alt: Is Single Value

  :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_is_single_value.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Is Single Value</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the feature-feature correlation ...">

.. only:: html

  .. image:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_feature_feature_correlation_thumb.png
    :alt: Feature Feature Correlation

  :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_feature_feature_correlation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Feature Feature Correlation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the columns info check.">

.. only:: html

  .. image:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_columns_info_thumb.png
    :alt: Columns Info

  :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_columns_info.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Columns Info</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the Class Imbalance check.">

.. only:: html

  .. image:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_class_imbalance_thumb.png
    :alt: Class Imbalance

  :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_class_imbalance.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Class Imbalance</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the Outlier Sample Detection che...">

.. only:: html

  .. image:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_outlier_sample_detection_thumb.png
    :alt: Outlier Sample Detection

  :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_outlier_sample_detection.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Outlier Sample Detection</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the identifier-label correlation...">

.. only:: html

  .. image:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_identifier_label_correlation_thumb.png
    :alt: Identifier Label Correlation

  :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_identifier_label_correlation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Identifier Label Correlation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the conflicting labels check.">

.. only:: html

  .. image:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_conflicting_labels_thumb.png
    :alt: Conflicting Labels

  :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_conflicting_labels.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Conflicting Labels</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the data duplicates check:">

.. only:: html

  .. image:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_data_duplicates_thumb.png
    :alt: Data Duplicates

  :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_data_duplicates.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Data Duplicates</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the Special Characters check.">

.. only:: html

  .. image:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_special_chars_thumb.png
    :alt: Special Characters

  :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_special_chars.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Special Characters</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the mixed data types check.">

.. only:: html

  .. image:: /checks_gallery/tabular/data_integrity/images/thumb/sphx_glr_plot_mixed_data_types_thumb.png
    :alt: Mixed Data Types

  :ref:`sphx_glr_checks_gallery_tabular_data_integrity_plot_mixed_data_types.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Mixed Data Types</div>
    </div>


.. raw:: html

    </div>

Model Evaluation
================



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the Model Info check.">

.. only:: html

  .. image:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_model_info_thumb.png
    :alt: Model Info

  :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_model_info.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Model Info</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Segment Performance">

.. only:: html

  .. image:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_segment_performance_thumb.png
    :alt: Segment Performance

  :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_segment_performance.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Segment Performance</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

  .. image:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_unused_features_thumb.png
    :alt: Unused Features

  :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_unused_features.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Unused Features</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip=" **Structure:**">

.. only:: html

  .. image:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_confusion_matrix_report_thumb.png
    :alt: Confusion Matrix Report

  :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_confusion_matrix_report.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Confusion Matrix Report</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

  .. image:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_simple_model_comparison_thumb.png
    :alt: Simple Model Comparison

  :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_simple_model_comparison.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Simple Model Comparison</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

  .. image:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_model_inference_time_thumb.png
    :alt: Model Inference Time

  :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_model_inference_time.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Model Inference Time</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**This check is deprecated and will be removed in future versions**, please use the Regression ...">

.. only:: html

  .. image:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_regression_systematic_error_thumb.png
    :alt: Regression Systematic Error

  :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_regression_systematic_error.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Regression Systematic Error</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

  .. image:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_single_dataset_performance_thumb.png
    :alt: Single Dataset Performance

  :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_single_dataset_performance.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Single Dataset Performance</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

  .. image:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_train_test_performance_thumb.png
    :alt: Train Test Performance

  :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_train_test_performance.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Train Test Performance</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip=" **Structure:**">

.. only:: html

  .. image:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_roc_report_thumb.png
    :alt: ROC Report

  :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_roc_report.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">ROC Report</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

  .. image:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_regression_error_distribution_thumb.png
    :alt: Regression Error Distribution

  :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_regression_error_distribution.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Regression Error Distribution</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the weak segment performance che...">

.. only:: html

  .. image:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_weak_segments_performance_thumb.png
    :alt: Weak Segments Performance

  :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_weak_segments_performance.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Weak Segments Performance</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the boosting overfit check.">

.. only:: html

  .. image:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_boosting_overfit_thumb.png
    :alt: Boosting Overfit

  :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_boosting_overfit.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Boosting Overfit</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the tabular prediction drift che...">

.. only:: html

  .. image:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_train_test_prediction_drift_thumb.png
    :alt: Train Test Prediction Drift

  :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_train_test_prediction_drift.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Train Test Prediction Drift</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

  .. image:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_calibration_score_thumb.png
    :alt: Calibration Score

  :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_calibration_score.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Calibration Score</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

  .. image:: /checks_gallery/tabular/model_evaluation/images/thumb/sphx_glr_plot_multi_model_performance_report_thumb.png
    :alt: Multi Model Performance Report

  :ref:`sphx_glr_checks_gallery_tabular_model_evaluation_plot_multi_model_performance_report.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multi Model Performance Report</div>
    </div>


.. raw:: html

    </div>

Train Test Validation
=====================


.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This check is deprecated, see `IdentifierLabelCorrelation">

.. only:: html

  .. image:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_identifier_leakage_thumb.png
    :alt: This check is deprecated, see `IdentifierLabelCorrelation

  :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_identifier_leakage.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">This check is deprecated, see `IdentifierLabelCorrelation</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This page provides an overview for using and understanding the &quot;String Mismatch Comparison&quot; che...">

.. only:: html

  .. image:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_string_mismatch_comparison_thumb.png
    :alt: String Mismatch Comparison

  :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_string_mismatch_comparison.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">String Mismatch Comparison</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="**Structure:**">

.. only:: html

  .. image:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_train_test_samples_mix_thumb.png
    :alt: Train Test Samples Mix

  :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_train_test_samples_mix.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Train Test Samples Mix</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Datasets Size Comparison">

.. only:: html

  .. image:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_datasets_size_comparison_thumb.png
    :alt: Datasets Size Comparison

  :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_datasets_size_comparison.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Datasets Size Comparison</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="New Label">

.. only:: html

  .. image:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_new_label_train_test_thumb.png
    :alt: New Label

  :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_new_label_train_test.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">New Label</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="New Category">

.. only:: html

  .. image:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_category_mismatch_train_test_thumb.png
    :alt: New Category

  :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_category_mismatch_train_test.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">New Category</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Index Leakage">

.. only:: html

  .. image:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_index_leakage_thumb.png
    :alt: Index Leakage

  :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_index_leakage.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Index Leakage</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebook provides an overview for using and understanding the &quot;Feature Label Correlation C...">

.. only:: html

  .. image:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_feature_label_correlation_change_thumb.png
    :alt: Feature Label Correlation Change

  :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_feature_label_correlation_change.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Feature Label Correlation Change</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding the multivariate drift check.">

.. only:: html

  .. image:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_multivariate_drift_thumb.png
    :alt: Multivariate Drift

  :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_multivariate_drift.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multivariate Drift</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding label drift check.">

.. only:: html

  .. image:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_train_test_label_drift_thumb.png
    :alt: Train Test Label Drift

  :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_train_test_label_drift.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Train Test Label Drift</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Date Train Test Leakage Overlap">

.. only:: html

  .. image:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_date_train_test_leakage_overlap_thumb.png
    :alt: Date Train Test Leakage Overlap

  :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_date_train_test_leakage_overlap.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Date Train Test Leakage Overlap</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Date Train Test Leakage Duplicates">

.. only:: html

  .. image:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_date_train_test_leakage_duplicates_thumb.png
    :alt: Date Train Test Leakage Duplicates

  :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_date_train_test_leakage_duplicates.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Date Train Test Leakage Duplicates</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This notebooks provides an overview for using and understanding feature drift check.">

.. only:: html

  .. image:: /checks_gallery/tabular/train_test_validation/images/thumb/sphx_glr_plot_train_test_feature_drift_thumb.png
    :alt: Train Test Feature Drift

  :ref:`sphx_glr_checks_gallery_tabular_train_test_validation_plot_train_test_feature_drift.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Train Test Feature Drift</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:

   /checks_gallery/tabular/custom/index.rst
   /checks_gallery/tabular/data_integrity/index.rst
   /checks_gallery/tabular/model_evaluation/index.rst
   /checks_gallery/tabular/train_test_validation/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: tabular_python.zip </checks_gallery/tabular/tabular_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: tabular_jupyter.zip </checks_gallery/tabular/tabular_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
